--- a/BlazorServerApp/Pages/_Layout.cshtml
+++ b/BlazorServerApp/Pages/_Layout.cshtml
@@ -26,6 +26,11 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; @DateTime.Now.Year - FindRoommates - <a href="contact">Contact</a>
+        </div>
+    </footer>
 
     <script src="_framework/blazor.server.js"></script>
 </body>
