show register & login

--- a/BlazorServerApp/Shared/MainLayout.razor
+++ b/BlazorServerApp/Shared/MainLayout.razor
@@ -8,7 +8,9 @@
     </div>
 
     <main>
+
         <div class="top-row px-4">
+            <LoginRegister></LoginRegister>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
